--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,700;1,800;1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  object-fit: cover;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card_post:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transition-duration: 0.5s;
+  transition: cubic-bezier();
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.bg_primary {
+  background-color: #79B4B7;
+  border: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  color: #79B4B7;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo_text {
+  font-size: 20px;
+}
+
+.bg_logo {
+  font-size: 64px;
+  vertical-align: middle;
+}
+
+.bg_login {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  padding: 1rem 1rem;
+  background-color: #79B4B7;
+}
+
+.login_page {
+  height: 100vh;
+  background-image: url('./assets/sample-pattern.png');
+}
+
+.carousel_img {
+  height: 300px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card_img {
+  height: 200px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.category_bg {
+  background-color: rgba(121, 180, 183, 0.486);
+  color: #79B4B7;
+  width: fit-content;
+}
+
+.category_bg p {
+  font-size: 12px;
+}
+
+.thumbnail {
+  background-color: #79B4B7;
+}
+
+.card_title {
+  font-size: 24px;
+  font-weight: bold;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.detail_post_banner {
+  height: 300px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card_content {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.card_info {
+  width: fit-content;
+  font-size: 16;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.bg_isi {
+  background-color: #ffffff;
+  color: #000000;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.ql-snow * {
+  background-color: #ffffff;
+  color: #000000;
+  overflow: visible;
+}
+
+.ql-toolbar.ql-snow {
+  background-color: #ffffff;
+}
+
+.ql-editor {
+  padding: 0px;
 }
